review 모바일 반응형 추가

--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -87,71 +87,74 @@
 				<div class="sub-title">
 					<h1>REVIEW</h1>
 				</div>
-				<div class="real-cont">
-					<!--// content -->
-					<div class="review">
-						<a href="https://blog.naver.com/jiyukimm/223154111804"
-							class="link-wrapper" target="_blank">
-							<div class="content">
-								<!-- 이부분이 제목 -->
-								<span class="title">W. 의정부 예조인테리어 시공후기</span>
-								<!-- 이부분이 본문내용 -->
-								<p>전체시공이 아니더라도 부분시공만으로 드라마틱한 효과를 보실 수 있으니 리모델링, 인테리어를 희망하시는
-									분들 의정부 예조인테리어 정말 추천드려요~~ 신혼집 인테리어 랜선집들이 마칩니다 '-' [출처] W. 의정부
-									예조인테리어 시공후기|작성자 지창부수</p>
-								<div class="hashtags">
-									<span class="hashtag">64평</span> <span class="hashtag">대리석</span>
-								</div>
-							</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv1.jpg"
-							class="image">
-						</a>
-					</div>
-					<div class="review">
-						<a href="https://blog.naver.com/nosugar-111/223331790554"
-							class="link-wrapper" target="_blank">
-							<div class="content">
-								<!-- 이부분이 제목 -->
-								<span class="title">의정부 인테리어, 안전한 선택 예조인테리어</span>
-								<!-- 이부분이 본문내용 -->
-								<p>
-									다양한 인테리어 업체 중에서 선택을 할 때, 신뢰성, 소통, 친절함 등을 고려해보면 예조인테리어가 안전하고 확실한
-									선택일 것입니다. 맡긴 일에 대한 걱정 없이, 안정적이고 품질 높은 인테리어 서비스를 경험하고 싶다면,
-									예조인테리어를 고려해 보세요. <br>[출처] 의정부 인테리어, 안전한 선택 예조인테리어|작성자
-									cafe_button
-								</p>
-								<div class="hashtags">
-									<span class="hashtag">128평</span> <span class="hashtag">우드</span>
-								</div>
-							</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv2.jpg"
-							class="image">
-						</a>
-					</div>
-					<div class="review">
-						<a href="https://blog.naver.com/ah__jin/223450205242"
-							class="link-wrapper" target="_blank">
-							<div class="content">
-								<!-- 이부분이 제목 -->
-								<span class="title">신혼집 인테리어 (예조인테리어)</span>
-								<!-- 이부분이 본문내용 -->
-								<p>깔끔하게 저희가 원했던 화이트 & 그레이 느낌으로 진행해 주시고 ​ 아트월까지 포인트로 너무
-									만족스러웠어요 ​ 이사 날에도 직접 오셔서 문제없는지 한 번 더 체크해 주시고 ​ 이사 이후에도 문의사항에 대해
+				<div class="wow fadeIn" data-wow-delay="0.3s"
+					data-wow-duration="0.8s">
+					<div class="real-cont">
+						<!--// content -->
+						<div class="review">
+							<a href="https://blog.naver.com/jiyukimm/223154111804"
+								class="link-wrapper" target="_blank">
+								<div class="content">
+									<!-- 이부분이 제목 -->
+									<span class="title">W. 의정부 예조인테리어 시공후기</span>
+									<!-- 이부분이 본문내용 -->
+									<p>전체시공이 아니더라도 부분시공만으로 드라마틱한 효과를 보실 수 있으니 리모델링, 인테리어를 희망하시는
+										분들 의정부 예조인테리어 정말 추천드려요~~ 신혼집 인테리어 랜선집들이 마칩니다 '-' <br>
+										[출처] W. 의정부 예조인테리어 시공후기|작성자 지창부수</p>
+									<div class="hashtags">
+										<span class="hashtag">64평</span> <span class="hashtag">대리석</span>
+									</div>
+								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv1.jpg"
+								class="image">
+							</a>
+						</div>
+						<div class="review">
+							<a href="https://blog.naver.com/nosugar-111/223331790554"
+								class="link-wrapper" target="_blank">
+								<div class="content">
+									<!-- 이부분이 제목 -->
+									<span class="title">의정부 인테리어, 안전한 선택 예조인테리어</span>
+									<!-- 이부분이 본문내용 -->
+									<p>
+										다양한 인테리어 업체 중에서 선택을 할 때, 신뢰성, 소통, 친절함 등을 고려해보면 예조인테리어가 안전하고
+										확실한 선택일 것입니다. 맡긴 일에 대한 걱정 없이, 안정적이고 품질 높은 인테리어 서비스를 경험하고 싶다면,
+										예조인테리어를 고려해 보세요. <br>
+										[출처] 의정부 인테리어, 안전한 선택 예조인테리어|작성자
+										cafe_button
+									</p>
+									<div class="hashtags">
+										<span class="hashtag">128평</span> <span class="hashtag">우드</span>
+									</div>
+								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv2.jpg"
+								class="image">
+							</a>
+						</div>
+						<div class="review">
+							<a href="https://blog.naver.com/ah__jin/223450205242"
+								class="link-wrapper" target="_blank">
+								<div class="content">
+									<!-- 이부분이 제목 -->
+									<span class="title">신혼집 인테리어 (예조인테리어)</span>
+									<!-- 이부분이 본문내용 -->
+									<p>깔끔하게 저희가 원했던 화이트 & 그레이 느낌으로 진행해 주시고 ​ 아트월까지 포인트로 너무
+										만족스러웠어요 ​ 이사 날에도 직접 오셔서 문제없는지 한 번 더 체크해 주시고 ​ 이사 이후에도 문의사항에 대해
 
-									친절하게 응대해 주셔서 너무 감사했습니다😊 ​ 의정부 인테리어 업체 예조인테리어 추천해요!! [출처] 5.
-									신혼집 인테리어 및 이사 (예조인테리어)|작성자 Ah jin</p>
-								<div class="hashtags">
-									<span class="hashtag">32평</span><span class="hashtag">신혼집</span><span
-										class="hashtag">화이트&그레이</span>
-								</div>
-							</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv3.jpg"
-							class="image">
-						</a>
+										친절하게 응대해 주셔서 너무 감사했습니다😊 ​ 의정부 인테리어 업체 예조인테리어 추천해요!! <br>
+										[출처] 5. 신혼집 인테리어 및 이사 (예조인테리어)|작성자 Ah jin</p>
+									<div class="hashtags">
+										<span class="hashtag">32평</span><span class="hashtag">신혼집</span><span
+											class="hashtag">화이트&그레이</span>
+									</div>
+								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv3.jpg"
+								class="image">
+							</a>
+						</div>
+						<!-- content //-->
+						<a href="#" class="load-more-button">후기 더보기</a>
 					</div>
-					<!-- content //-->
-					<a href="#" class="load-more-button">후기 더보기</a>
 				</div>
 			</div>
 		</div>
-
 		<!--// footer -->
 		<div th:replace="~{main/footer :: footer}"></div>
 
