--- a/yejo/src/main/resources/static/css/review.css
+++ b/yejo/src/main/resources/static/css/review.css
@@ -1,17 +1,16 @@
 .review {
-    display: flex; /* 플렉스 박스를 사용하여 수평 정렬 */
+    display: flex;  /* 기본적으로 수평 정렬 */
     align-items: flex-start; /* 수직 상단 정렬 */
     margin: 20px; /* 전체 여백 */
     padding-bottom: 20px; /* 하단 여백 */
     border-bottom: 1px solid #ccc; /* 리뷰 구분을 위한 경계선 */
 }
 
-/* 부모 요소인 .real-cont에서 마지막 자식 요소인 .review를 선택하여 경계선을 제거 */
+/* 마지막 리뷰의 경계선 제거 */
 .real-cont > .review:last-of-type {
-    border-bottom: none; /* 마지막 리뷰는 경계선 제거 */
-    margin-bottom: 0; /* 마지막 리뷰 아래 여백 제거 */
+    border-bottom: none;
+    margin-bottom: 0;
 }
-
 
 .review .content {
     flex: 1; /* 본문 내용이 가변적으로 크기를 조정 */
@@ -19,26 +18,21 @@
 }
 
 .review a {
-    font-size: 20px; /* 제목 폰트 크기 */
-    font-weight: bold; /* 제목 두께 */
     text-decoration: none; /* 링크 밑줄 제거 */
-    color: #333; /* 제목 색상 */
-}
-
-.content {
-    font-size: 16px; /* 본문 폰트 크기 */
-    color: #555; /* 본문 색상 */
+    color: inherit; /* 링크의 색상을 부모 요소의 색상으로 설정 */
 }
 
 .title {
     font-size: 18px; /* 제목 글꼴 크기 조정 */
     font-weight: bold; /* 제목 굵게 */
-    text-decoration: none; /* 링크 아래 줄 제거 */
-    color: #333; /* 제목 글자 색상 */
-    margin-bottom: 12px; /* 제목과 본문 사이 간격 */
-    display: inline-block; /* 마진이 적용되도록 인라인 블록으로 설정 */
+    margin-bottom: 8px; /* 제목과 본문 사이 간격 */
+    display: block; /* 블록 요소로 설정하여 margin-bottom 작동하게 함 */
 }
 
+.content p {
+    font-size: 16px; /* 본문 폰트 크기 */
+    color: #555; /* 본문 색상 */
+}
 
 .image {
     width: 300px; /* 이미지 너비 */
@@ -66,6 +60,7 @@
     background-color: #333; /* 호버 시 배경색 변경 */
     color: #fff; /* 호버 시 글자색 변경 */
 }
+
 .link-wrapper {
     display: flex; /* 플렉스 박스를 사용하여 수평 정렬 */
     text-decoration: none; /* 링크 아래 줄 제거 */
@@ -80,6 +75,7 @@
     font-weight: normal; /* 본문 텍스트의 두께를 일반으로 설정 */
     color: #555; /* 본문 색상 재설정 */
 }
+
 .hashtags {
     display: flex; /* 플렉스 박스를 사용하여 해시태그를 가로로 정렬 */
     margin-top: 10px; /* 본문과 해시태그 사이 여백 */
@@ -94,3 +90,21 @@
     color: #333; /* 글자 색상 */
     font-weight: bold; /* 굵은 글씨 */
 }
+
+/* 모바일 화면에서의 스타일 조정 */
+@media (max-width: 768px) { /* 768px 이하에서 적용 */
+    .link-wrapper {
+        flex-direction: column; /* 세로 방향으로 쌓이게 설정 */
+    }
+
+    .review .content {
+        margin-right: 0; /* 모바일에서는 오른쪽 여백 제거 */
+        margin-bottom: 20px; /* 이미지와의 간격을 위해 하단 여백 추가 */
+    }
+
+    .image {
+        width: 100%; /* 모바일에서는 이미지 너비를 100%로 설정 */
+        height: auto; /* 비율 유지 */
+    }
+}
+
