--- a/yejo/src/main/resources/static/css/reset.css
+++ b/yejo/src/main/resources/static/css/reset.css
@@ -21,6 +21,9 @@
 :after, :before {-webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box;}
 
 /* reset */
+body{
+	background-color: rgba(252, 253, 248);
+}
 body,p,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,table,th,td,form,fieldset,legend,input,textarea,button,select,figure,figcaption{margin:0;padding:0}
 body,input,textarea,select,button,table{font-family:'Pretendard','Open Sans',AppleGothic,helvetica,sans-serif;font-size:16px;line-height:1.75em;color:#454545;word-break:keep-all;-webkit-text-size-adjust:none;}
 img{border:0;max-width:100%;vertical-align:top;}
