포트폴리오 상세보기

--- a/yejo/src/main/resources/templates/admin/location.html
+++ b/yejo/src/main/resources/templates/admin/location.html
@@ -143,6 +143,12 @@
                                             <label for="tel">전화번호</label>
                                             <input type="tel" class="form-control" id="tel" value="" placeholder="전화번호를 입력하세요">
                                         </div>
+                                        
+                                        <!-- 안심번호 입력란 -->
+                                        <div class="form-group">
+                                            <label for="safe_tel">안심번호</label>
+                                            <input type="safe_tel" class="form-control" id="safe_tel" value="" placeholder="안심번호를 입력하세요">
+                                        </div>
 
                                         <!-- 이메일 입력란 -->
                                         <div class="form-group">
@@ -169,11 +175,13 @@
                                         </div>
 
                                         <!-- 티맵 URL 입력란 -->
+                                        <!-- 
                                         <div class="form-group">
                                             <label for="tmapUrl">티맵 URL</label>
                                             <input type="url" class="form-control" id="tmapUrl" placeholder="티맵 URL을 입력하세요">
                                         </div>
-
+										 -->
+										 
                                         <!-- 제출 버튼 -->
                                         <button type="submit" class="btn btn-primary">저장</button>
                                     </form>
