--- a/yejo/src/main/resources/templates/main/consultant.html
+++ b/yejo/src/main/resources/templates/main/consultant.html
@@ -1,21 +1,20 @@
-
 <!DOCTYPE html>
- <html lang="ko">
+ <html lang="ko" xmlns:th="https://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
-	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="아울디자인">
-	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
-	<meta name="keywords" content="아울디자인">
-    	<title>아울디자인</title>
+	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="YEJO인테리어">
+	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
+	<meta name="keywords" content="YEJO인테리어">
+    	<title>YEJO인테리어</title>
 
 	<meta property="og:url"	content="https://owldesign.co.kr">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="아울디자인">
-	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
+	<meta property="og:title" content="YEJO인테리어">
+	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
 	<meta property="og:image" content="https://owldesign.co.kr/images/sns_link.png">
 	<link rel="canonical" href="https://owldesign.co.kr">
 
@@ -59,7 +58,7 @@
 
 	<!-- for mobile -->
 	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="OWL DESIGN"></a></div>
+		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
 		<div class="m-lang"></div>
 		<nav class="nav-menu">
 		</nav>
@@ -247,7 +246,7 @@ function inputNum(obj){
 				<div class="txt-box agree-box">
 					<div class="terms-wrap">
 	<div class="sec">
-		아울디자인은(는) (이하 '회사'는) 고객님의 개인정보를 중요시하며, "정보통신망 이용촉진 및 정보보호"에 관한 법률을 준수하고 있습니다. <br>
+		YEJO인테리어은(는) (이하 '회사'는) 고객님의 개인정보를 중요시하며, "정보통신망 이용촉진 및 정보보호"에 관한 법률을 준수하고 있습니다. <br>
 		회사는 개인정보처리방침을 통하여 고객님께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.<br><br>
 		회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.<br>
 		- 본 방침은 : 2024년 04월 29일부터 시행됩니다. <br><br>
