--- a/yejo/src/main/resources/templates/main/portfolio.html
+++ b/yejo/src/main/resources/templates/main/portfolio.html
@@ -1,21 +1,20 @@
-
 <!DOCTYPE html>
- <html lang="ko">
+ <html lang="ko" xmlns:th="https://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
-	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="아울디자인">
-	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
-	<meta name="keywords" content="아울디자인">
-    	<title>아울디자인</title>
+	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="YEJO인테리어">
+	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
+	<meta name="keywords" content="YEJO인테리어">
+    	<title>YEJO인테리어</title>
 
 	<meta property="og:url"	content="https://owldesign.co.kr">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="아울디자인">
-	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
+	<meta property="og:title" content="YEJO인테리어">
+	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
 	<meta property="og:image" content="https://owldesign.co.kr/images/sns_link.png">
 	<link rel="canonical" href="https://owldesign.co.kr">
 
@@ -59,7 +58,7 @@
 
 	<!-- for mobile -->
 	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="OWL DESIGN"></a></div>
+		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
 		<div class="m-lang"></div>
 		<nav class="nav-menu">
 		</nav>
@@ -75,6 +74,7 @@
 		<div class="real-cont">
 			<!--// content -->
 						<!-- 리스트 -->
+						<!-- 
 		<div class="portfolio-list wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
 			<ul>
 									<li>
@@ -141,8 +141,10 @@
 			</div>
 
 			<div class="paginate"><a class="direction first disabled" href="#" title='처음페이지'><span>처음페이지</span></a> <strong>1</strong>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=6" title='2'>2</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=12" title='3'>3</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=18" title='4'>4</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=24" title='5'>5</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=30" title='6'>6</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=36" title='7'>7</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=42" title='8'>8</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=48" title='9'>9</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=54" title='10'>10</a> <a class="direction next" href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=60" title='다음페이지'><span>다음페이지</span></a><a class="direction last" href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=60" title='마지막페이지'><span>마지막페이지</span></a>			</div>
+			
+			 -->
 			<!-- 리스트 //-->
-				<!-- <div class="portfolio-list wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
+				 <div class="portfolio-list wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
 					<ul>
 						<li>
 							<a href="/portfolio-detail.php">
@@ -154,7 +156,7 @@
 						</li>
 						<li>
 							<a href="/portfolio-detail.php">
-								<div class="thumb"><img src="/images/temp/1.jpg" alt="현장명이"></div>
+								<div class="thumb"><img src="/images/temp/2.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
 								</div>
@@ -162,7 +164,7 @@
 						</li>
 						<li>
 							<a href="/portfolio-detail.php">
-								<div class="thumb"><img src="/images/temp/1.jpg" alt="현장명이"></div>
+								<div class="thumb"><img src="/images/temp/3.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
 								</div>
@@ -170,7 +172,7 @@
 						</li>
 						<li>
 							<a href="/portfolio-detail.php">
-								<div class="thumb"><img src="/images/temp/1.jpg" alt="현장명이"></div>
+								<div class="thumb"><img src="/images/temp/4.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
 								</div>
@@ -178,7 +180,7 @@
 						</li>
 						<li>
 							<a href="/portfolio-detail.php">
-								<div class="thumb"><img src="/images/temp/1.jpg" alt="현장명이"></div>
+								<div class="thumb"><img src="/images/temp/5.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
 								</div>
@@ -186,7 +188,7 @@
 						</li>
 						<li>
 							<a href="/portfolio-detail.php">
-								<div class="thumb"><img src="/images/temp/1.jpg" alt="현장명이"></div>
+								<div class="thumb"><img src="/images/temp/6.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
 								</div>
@@ -197,7 +199,7 @@
 				
 				<div class="paginate">
 					<a class="direction first" href="#"><span>처음페이지</span></a><a class="direction prev" href="#"><span>이전페이지</span></a><strong>1</strong><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a class="direction next" href="#"><span>다음페이지</span></a><a class="direction last" href="#"><span>마지막페이지</span></a>
-				</div> -->
+				</div> 
 			<!-- content //-->
 		</div>
 	</div>
