--- a/yejo/src/main/resources/templates/main/company.html
+++ b/yejo/src/main/resources/templates/main/company.html
@@ -1,21 +1,20 @@
-
 <!DOCTYPE html>
- <html lang="ko">
+ <html lang="ko" xmlns:th="https://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
-	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="아울디자인">
-	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
-	<meta name="keywords" content="아울디자인">
+	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="YEJO인테리어">
+	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
+	<meta name="keywords" content="YEJO인테리어">
     	<title>YEJO 인테리어</title>
 
 	<meta property="og:url"	content="https://owldesign.co.kr">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="아울디자인">
-	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
+	<meta property="og:title" content="YEJO인테리어">
+	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
 	<meta property="og:image" content="https://owldesign.co.kr/images/sns_link.png">
 	<link rel="canonical" href="https://owldesign.co.kr">
 
