--- a/yejo/src/main/resources/templates/main/footer.html
+++ b/yejo/src/main/resources/templates/main/footer.html
@@ -3,8 +3,8 @@
 			<div class="contain">
 				<address>
 					<strong>YEJO</strong>
-					<span>대표 : 이형준</span> <span>주소 : 경기 의정부시 호암로 252 상가1동 105호</span> <span>TEL :  </span> <span>E-MAIL : </span>
-					<span class="copyright">Copyright(C)YEJO INTERIOR. All Rights Reserved. <a href="https://www.website.co.kr/" target="_blank" title="새창열림">Desigend by WebSite.co.kr</a></span>
+					<span>대표 : 이형준</span> <span>주소 : 경기 의정부시 호암로 252 상가1동 105호</span> <span>TEL : 010-2785-7048  </span> <span>E-MAIL : </span>
+					<span class="copyright">Copyright(C)YEJO INTERIOR. All Rights Reserved. <a href="#" target="_blank" title="새창열림">Desigend by passionlife</a></span>
 				</address>
 			</div>
 		</div>
