--- a/yejo/src/main/resources/templates/main/location.html
+++ b/yejo/src/main/resources/templates/main/location.html
@@ -1,26 +1,18 @@
-
 <!DOCTYPE html>
- <html lang="ko">
+<html lang="ko" xmlns:th="https://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
-	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="아울디자인">
+	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />
+	<meta name="subject" content="아울디자인">
 	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
-	<meta name="keywords" content="아울디자인">
-    	<title>YEJO 인테리어</title>
-
-	<meta property="og:url"	content="https://owldesign.co.kr">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="아울디자인">
-	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
-	<meta property="og:image" content="https://owldesign.co.kr/images/sns_link.png">
-	<link rel="canonical" href="https://owldesign.co.kr">
+	<meta name="keywords" content="YEJO 인테리어">
+	<title>YEJO 인테리어</title>
 
 	<link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
-
 	<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="/css/pretendard.css">
 	<link rel="stylesheet" type="text/css" href="/css/animate.css">
@@ -35,7 +27,7 @@
 
 	<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.gnb.js"></script>
-	<script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>	
+	<script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="/js/slick.js"></script> 	
 	<script type="text/javascript" src="/js/swiper.min.js"></script>
 	<script type="text/javascript" src="/js/venobox.js"></script>
@@ -45,24 +37,26 @@
 	<link rel="stylesheet" type="text/css" href="/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen">
 	<script type="text/javascript" src="/js/wow.min.js"></script>
 	<script type="text/javascript" src="/js/script.js"></script>
+	<style>
+
+	</style>
 </head>
 
 <body id="sub" style="background-image:url('../images/common/sub-bg.gif');">
 <div id="skipToContent">
-				<a href="#contArea">본문 바로가기</a>
-				<a href="#gnb">주메뉴 바로가기</a>
-	</div>
+	<a href="#contArea">본문 바로가기</a>
+	<a href="#gnb">주메뉴 바로가기</a>
+</div>
 <div id="wrapper"> 
-	<!-- // header -->
+	<!-- header -->
     <div th:replace="~{main/header :: header}"></div>
-	<!-- header //-->
+	<!-- header -->
 
 	<!-- for mobile -->
 	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="OWL DESIGN"></a></div>
+		<div class="home"><a href="/"><img src="/images/common/logo2.png" alt="YEJO interior"></a></div>
 		<div class="m-lang"></div>
-		<nav class="nav-menu">
-		</nav>
+		<nav class="nav-menu"></nav>
 		<a href="javascript:void(0);" class="close">Close</a>
 	</div>
 	<div class="mobile-overlay"></div>
@@ -70,89 +64,73 @@
 <div id="container">
 	<div id="contArea">
 		<div class="sub-title">
-			<h1>LOCATION</h1>
+			<h1>ABOUT</h1>
 		</div>
 		<div class="real-cont">
-			<!--// content -->
-			<div class="wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
-				<h2 class="doc-tit"><span class="highlight">YOUTUBE</span></h2>
-				<div class="doc-cnt">
-					<div class="sns-list">
-						<ul>
-										
-									<li>
-													<a href="https://www.youtube.com/embed/EwiNuowHLio?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
-												<div class="thumb"><img src="https://img.youtube.com/vi/EwiNuowHLio/maxresdefault.jpg" alt="youtube3"></div></a>
-						
-					</li>
-									<li>
-													<a href="https://www.youtube.com/embed/nM8gTgYaOuQ?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
-												<div class="thumb"><img src="https://img.youtube.com/vi/nM8gTgYaOuQ/maxresdefault.jpg" alt="youtube2"></div></a>
-						
-					</li>
-									<li>
-													<a href="https://www.youtube.com/embed/kYnZv5Oy5Mc?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
-												<div class="thumb"><img src="https://img.youtube.com/vi/kYnZv5Oy5Mc/maxresdefault.jpg" alt="youtube1"></div></a>
-						
-					</li>
-				
-
-
-											<!-- <li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li> -->
-						</ul>
+			<div class="about wow fadeIn" data-wow-delay="0.3s" data-wow-duration="0.8s">
+				<div class="txt-wrap">
+					<h2 class="doc-tit"><span class="highlight">YEJO 인테리어는</span></h2>
+					<p class="txt">전문적이고 혁신적인 디자인으로 업계를 선도하고 있는 인테리어 전문 기업입니다.</p>
+					<div class="info">
+						<dl>
+							<dt>Address</dt>
+							<dd>경기 의정부시 호암로 252 상가1동 105호</dd>
+						</dl>
+						<dl>
+							<dt>Tel</dt>
+							<dd>010-2785-7048</dd>
+						</dl>
+						<dl>
+							<dt>Safe Tel</dt>
+							<dd>0507-1361-7048</dd>
+						</dl>
+						<dl>
+							<dt>E-mail</dt>
+							<dd></dd>
+						</dl>
+					</div>
+					<div class="btns">
+						<a href="https://map.naver.com/p/entry/place/1546050659?c=15.00,0,0,0,dh" title="새창열림" target="_blank">네이버지도 보기</a>
+						<a href="https://kko.kakao.com/5IEPZMGBwo" title="새창열림" target="_blank">카카오맵 보기</a>
 					</div>
 				</div>
-				<h2 class="doc-tit"><span class="highlight">BLOG</span></h2>
-				<div class="doc-cnt">
-					<div class="sns-list">
-						<ul>
-										
-									<li>
-													<a href="https://blog.naver.com/owl_design/223413340512" target="_blank">
-												<div class="thumb"><img src="/uploaded/board/blog/7f193c42a4233426f740f43e8bb1443e0.jpg" alt=""></div></a>
-						
-					</li>
-									<li>
-													<a href="https://blog.naver.com/owl_design/223425823725" target="_blank">
-												<div class="thumb"><img src="/uploaded/board/blog/734502a7906cc23cc5055f23e38367c70.jpg" alt=""></div></a>
-						
-					</li>
-									<li>
-													<a href="https://blog.naver.com/owl_design/222678513413" target="_blank">
-												<div class="thumb"><img src="/uploaded/board/blog/92fe7b812f97eac93658cc6f9de489b70.jpg" alt=""></div></a>
-						
-					</li>
-				
+				<div class="map">
+					<div id="map" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8f3429547b6bf089e5d3beb4733c7cf5&libraries=services"></script>
+					<script charset="UTF-8">
+					    var mapContainer = document.getElementById('map'), 
+					        mapOption = { 
+					            center: new kakao.maps.LatLng(37.745755, 127.052335), // 초기 지도 중심 좌표
+					            level: 3 // 지도 확대 레벨
+					        };
+					    // 지도 생성
+					    var map = new kakao.maps.Map(mapContainer, mapOption); 
 
+					    // 초기 마커 설정
+					    var marker = new kakao.maps.Marker({
+					        position: mapOption.center,
+					        map: map
+					    });
 
-											<!-- <li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li> -->
-						</ul>
-					</div>
+					 // 인포윈도우 내용 및 스타일 적용
+					    var iwContent = '<div class="custom-info-window" style="margin-left:10px;">YEJO 인테리어</div>'; // 인포윈도우에 표시할 내용
+					    var infowindow = new kakao.maps.InfoWindow({
+					        content: iwContent, // 인포윈도우에 표시할 내용 설정
+					        removable: true // 닫기 버튼을 제공
+					    });
+
+					    // 인포윈도우를 마커 위에 표시
+					    infowindow.open(map, marker);
+					</script>
 				</div>
 			</div>
-			<!-- content //-->
 		</div>
 	</div>
 </div>
 
-	<!--// footer -->
+	<!-- footer -->
    <div th:replace="~{main/footer :: footer}"></div>
-	
-	
-	
-    <!-- footer //-->
+    <!-- footer -->
 </div>
-
-
 </body>
 </html>
