--- a/yejo/src/main/resources/templates/main/portfolio.html
+++ b/yejo/src/main/resources/templates/main/portfolio.html
@@ -147,7 +147,7 @@
 				 <div class="portfolio-list wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
 					<ul>
 						<li>
-							<a href="/portfolio-detail.php">
+							<a href="/portfolio-detail">
 								<div class="thumb"><img src="/images/temp/1.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
@@ -155,7 +155,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="/portfolio-detail.php">
+							<a href="/portfolio-detail">
 								<div class="thumb"><img src="/images/temp/2.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
@@ -163,7 +163,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="/portfolio-detail.php">
+							<a href="/portfolio-detail">
 								<div class="thumb"><img src="/images/temp/3.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
@@ -171,7 +171,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="/portfolio-detail.php">
+							<a href="/portfolio-detail">
 								<div class="thumb"><img src="/images/temp/4.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
@@ -179,7 +179,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="/portfolio-detail.php">
+							<a href="/portfolio-detail">
 								<div class="thumb"><img src="/images/temp/5.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
@@ -187,7 +187,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="/portfolio-detail.php">
+							<a href="/portfolio-detail">
 								<div class="thumb"><img src="/images/temp/6.jpg" alt="현장명이"></div>
 								<div class="hover-cont">
 									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
