--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
- <html lang="ko" xmlns:th="https://www.thymeleaf.org">
+<html lang="ko" xmlns:th="https://www.thymeleaf.org">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
-	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="YEJO인테리어">
-	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
-	<meta name="keywords" content="YEJO인테리어">
-    	<title>YEJO 인테리어</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta
+	content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes"
+	name="viewport">
+<meta name="format-detection" content="telephone=no">
+<meta name="naver-site-verification"
+	content="44191bf280942a37902e9d4e7aa341c5ddccb7db" />
+<meta name="google-site-verification"
+	content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />
+<meta name="subject" content="YEJO인테리어">
+<meta name="description"
+	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
+<meta name="keywords" content="YEJO인테리어">
+<title>YEJO 인테리어</title>
 
-	<meta property="og:url"	content="https://yejointerior.co.kr">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="YEJO인테리어">
-	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
-	<meta property="og:image" content="https://yejointerior.co.kr/images/sns_link.png">
-	<link rel="canonical" href="https://yejointerior.co.kr">
+<meta property="og:url" content="https://yejointerior.co.kr">
+<meta property="og:type" content="website">
+<meta property="og:title" content="YEJO인테리어">
+<meta property="og:description"
+	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
+<meta property="og:image"
+	content="https://yejointerior.co.kr/images/sns_link.png">
+<link rel="canonical" href="https://yejointerior.co.kr">
 
 <link rel="stylesheet" type="text/css"
 	href="/common/froala/css/froala_style.min.css" />
@@ -62,35 +69,18 @@
 		<div th:replace="~{main/header :: header}"></div>
 		<!-- header //-->
 
-<<<<<<< HEAD
-	<!-- for mobile -->
-	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
-		<div class="m-lang"></div>
-		<nav class="nav-menu">
-		</nav>
-		<a href="javascript:void(0);" class="close">Close</a>
-	</div>
-	<div class="mobile-overlay"></div>
-    
-<div id="container">
-	<div id="contArea">
-		<div class="sub-title">
-			<h1>REVIEW</h1>
-=======
 		<!-- for mobile -->
 		<div id="menu" class="mobile-navigation">
 			<div class="home">
 				<a href="/index.php"><img src="/images/common/logo2.png"
-					alt="OWL DESIGN"></a>
+					alt="YEJO INTERIOR"></a>
 			</div>
 			<div class="m-lang"></div>
 			<nav class="nav-menu"></nav>
 			<a href="javascript:void(0);" class="close">Close</a>
->>>>>>> branch 'main' of https://github.com/yejoInterior/yejo-interior.git
 		</div>
 		<div class="mobile-overlay"></div>
-
+		
 		<div id="container">
 			<div id="contArea">
 				<div class="sub-title">
@@ -107,9 +97,11 @@
 									<!-- 이부분이 제목 -->
 									<span class="title">W. 의정부 예조인테리어 시공후기</span>
 									<!-- 이부분이 본문내용 -->
-									<p>전체시공이 아니더라도 부분시공만으로 드라마틱한 효과를 보실 수 있으니 리모델링, 인테리어를 희망하시는
-										분들 의정부 예조인테리어 정말 추천드려요~~ 신혼집 인테리어 랜선집들이 마칩니다 '-' <br>
-										[출처] W. 의정부 예조인테리어 시공후기|작성자 지창부수</p>
+									<p>
+										전체시공이 아니더라도 부분시공만으로 드라마틱한 효과를 보실 수 있으니 리모델링, 인테리어를 희망하시는 분들
+										의정부 예조인테리어 정말 추천드려요~~ 신혼집 인테리어 랜선집들이 마칩니다 '-' <br> [출처]
+										W. 의정부 예조인테리어 시공후기|작성자 지창부수
+									</p>
 									<div class="hashtags">
 										<span class="hashtag">64평</span> <span class="hashtag">대리석</span>
 									</div>
@@ -127,8 +119,7 @@
 									<p>
 										다양한 인테리어 업체 중에서 선택을 할 때, 신뢰성, 소통, 친절함 등을 고려해보면 예조인테리어가 안전하고
 										확실한 선택일 것입니다. 맡긴 일에 대한 걱정 없이, 안정적이고 품질 높은 인테리어 서비스를 경험하고 싶다면,
-										예조인테리어를 고려해 보세요. <br>
-										[출처] 의정부 인테리어, 안전한 선택 예조인테리어|작성자
+										예조인테리어를 고려해 보세요. <br> [출처] 의정부 인테리어, 안전한 선택 예조인테리어|작성자
 										cafe_button
 									</p>
 									<div class="hashtags">
@@ -145,11 +136,12 @@
 									<!-- 이부분이 제목 -->
 									<span class="title">신혼집 인테리어 (예조인테리어)</span>
 									<!-- 이부분이 본문내용 -->
-									<p>깔끔하게 저희가 원했던 화이트 & 그레이 느낌으로 진행해 주시고 ​ 아트월까지 포인트로 너무
-										만족스러웠어요 ​ 이사 날에도 직접 오셔서 문제없는지 한 번 더 체크해 주시고 ​ 이사 이후에도 문의사항에 대해
-
-										친절하게 응대해 주셔서 너무 감사했습니다😊 ​ 의정부 인테리어 업체 예조인테리어 추천해요!! <br>
-										[출처] 5. 신혼집 인테리어 및 이사 (예조인테리어)|작성자 Ah jin</p>
+									<p>
+										깔끔하게 저희가 원했던 화이트 & 그레이 느낌으로 진행해 주시고 ​ 아트월까지 포인트로 너무 만족스러웠어요 ​
+										이사 날에도 직접 오셔서 문제없는지 한 번 더 체크해 주시고 ​ 이사 이후에도 문의사항에 대해 친절하게 응대해
+										주셔서 너무 감사했습니다😊 ​ 의정부 인테리어 업체 예조인테리어 추천해요!! <br> [출처] 5.
+										신혼집 인테리어 및 이사 (예조인테리어)|작성자 Ah jin
+									</p>
 									<div class="hashtags">
 										<span class="hashtag">32평</span><span class="hashtag">신혼집</span><span
 											class="hashtag">화이트&그레이</span>
@@ -166,9 +158,6 @@
 		</div>
 		<!--// footer -->
 		<div th:replace="~{main/footer :: footer}"></div>
-
-
-
 		<!-- footer //-->
 	</div>
 
