--- a/yejo/src/main/resources/templates/main/main.html
+++ b/yejo/src/main/resources/templates/main/main.html
@@ -34,6 +34,19 @@
 	<link rel="stylesheet" type="text/css" href="/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen">
 	<script type="text/javascript" src="/js/wow.min.js"></script>
 	<script type="text/javascript" src="/js/script.js"></script>
+	<style>
+	.sitelogo a {
+	    display: block;
+	    text-indent: -999em;
+	    overflow: hidden;
+	    width: 193px;
+	    height: 38px;
+	    background-repeat: no-repeat;
+	    background-position: 50% 50%;
+	    background-size: contain;
+	    background-image: url(../images/common/logo.png);
+	}
+	</style>
 </head>
 <body id="main" >
 <div id="skipToContent">
