--- a/yejo/src/main/resources/templates/main/portfolio-detail.html
+++ b/yejo/src/main/resources/templates/main/portfolio-detail.html
@@ -7,8 +7,8 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
 	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />
-	<meta name="subject" content="아울디자인">
-	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
+	<meta name="subject" content="예조인테리어">
+	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 예조인테리어.">
 	<meta name="keywords" content="YEJO 인테리어">
 	<title>YEJO 인테리어</title>
 
