--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -103,7 +103,7 @@
 										W. 의정부 예조인테리어 시공후기|작성자 지창부수
 									</p>
 									<div class="hashtags">
-										<span class="hashtag">64평</span> <span class="hashtag">대리석</span>
+										<span class="hashtag"># 64평</span> <span class="hashtag"># 대리석</span>
 									</div>
 								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv1.jpg"
 								class="image">
@@ -123,7 +123,7 @@
 										cafe_button
 									</p>
 									<div class="hashtags">
-										<span class="hashtag">128평</span> <span class="hashtag">우드</span>
+										<span class="hashtag"># 128평</span> <span class="hashtag"># 우드</span>
 									</div>
 								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv2.jpg"
 								class="image">
@@ -143,8 +143,8 @@
 										신혼집 인테리어 및 이사 (예조인테리어)|작성자 Ah jin
 									</p>
 									<div class="hashtags">
-										<span class="hashtag">32평</span><span class="hashtag">신혼집</span><span
-											class="hashtag">화이트&그레이</span>
+										<span class="hashtag"># 32평</span><span class="hashtag"># 신혼집</span><span
+											class="hashtag"># 화이트&그레이</span>
 									</div>
 								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv3.jpg"
 								class="image">
