--- a/yejo/src/main/resources/templates/main/portfolio.html
+++ b/yejo/src/main/resources/templates/main/portfolio.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/slick.css">
 	<link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/responsive.css">
+	<link rel="stylesheet" type="text/css" href="/css/kakao.css">
 
 	<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.gnb.js"></script>
@@ -204,7 +205,9 @@
 		</div>
 	</div>
 </div>
-
+<a href="https://open.kakao.com/o/your-openchat-link" target="_blank" class="kakao-btn">
+    <img src="/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
+</a>
 
 	<!--// footer -->
    <div th:replace="~{/main/footer.html :: footer}"></div>
