--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -41,6 +41,7 @@
 <link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="/css/responsive.css">
 <link rel="stylesheet" type="text/css" href="/css/review.css">
+<link rel="stylesheet" type="text/css" href="/css/kakao.css">
 
 <script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="/js/jquery.gnb.js"></script>
@@ -80,7 +81,7 @@
 			<a href="javascript:void(0);" class="close">Close</a>
 		</div>
 		<div class="mobile-overlay"></div>
-		
+
 		<div id="container">
 			<div id="contArea">
 				<div class="sub-title">
@@ -103,7 +104,8 @@
 										W. 의정부 예조인테리어 시공후기|작성자 지창부수
 									</p>
 									<div class="hashtags">
-										<span class="hashtag"># 64평</span> <span class="hashtag"># 대리석</span>
+										<span class="hashtag"># 64평</span> <span class="hashtag">#
+											대리석</span>
 									</div>
 								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv1.jpg"
 								class="image">
@@ -123,7 +125,8 @@
 										cafe_button
 									</p>
 									<div class="hashtags">
-										<span class="hashtag"># 128평</span> <span class="hashtag"># 우드</span>
+										<span class="hashtag"># 128평</span> <span class="hashtag">#
+											우드</span>
 									</div>
 								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv2.jpg"
 								class="image">
@@ -143,8 +146,8 @@
 										신혼집 인테리어 및 이사 (예조인테리어)|작성자 Ah jin
 									</p>
 									<div class="hashtags">
-										<span class="hashtag"># 32평</span><span class="hashtag"># 신혼집</span><span
-											class="hashtag"># 화이트&그레이</span>
+										<span class="hashtag"># 32평</span><span class="hashtag">#
+											신혼집</span><span class="hashtag"># 화이트&그레이</span>
 									</div>
 								</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv3.jpg"
 								class="image">
@@ -156,6 +159,10 @@
 				</div>
 			</div>
 		</div>
+		<a href="https://open.kakao.com/o/your-openchat-link" target="_blank"
+			class="kakao-btn"> <img
+			src="/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
+		</a>
 		<!--// footer -->
 		<div th:replace="~{main/footer :: footer}"></div>
 		<!-- footer //-->
