--- a/yejo/src/main/resources/templates/main/main.html
+++ b/yejo/src/main/resources/templates/main/main.html
@@ -103,7 +103,7 @@
 		</div> -->
 		<div class="arrow left">&lt;</div>
         <div class="arrow right">&gt;</div>
-		<div class="main-btn"><a href="/consulting">견적 문의 ㅎㅎz2ㅎ4</a></div>
+		<div class="main-btn"><a href="/consulting">견적 문의</a></div>
 	</div>
 </div>
 <a href="https://open.kakao.com/o/your-openchat-link" target="_blank" class="kakao-btn">
