--- a/yejo/src/main/resources/templates/admin/review-management.html
+++ b/yejo/src/main/resources/templates/admin/review-management.html
@@ -38,14 +38,16 @@
 
 			<!-- Main Content -->
 			<div id="content">
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                    <!-- Sidebar Toggle (Topbar) -->
-                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                    <h1 class="h3 mb-0 text-gray-800">후기 관리</h1>
-                </nav>
-				
+				<nav
+					class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+					<!-- Sidebar Toggle (Topbar) -->
+					<button id="sidebarToggleTop"
+						class="btn btn-link d-md-none rounded-circle mr-3">
+						<i class="fa fa-bars"></i>
+					</button>
+					<h1 class="h3 mb-0 text-gray-800">후기 관리</h1>
+				</nav>
+
 
 				<!-- Begin Page Content -->
 				<div class="container-fluid">
@@ -63,7 +65,8 @@
 								<tr>
 									<th>번호</th>
 									<th>작성자</th>
-									<th>별점</th>
+									<th>해시태그</th>
+									<!-- 별점 대신 해시태그로 변경 -->
 									<th>사진</th>
 									<th>내용</th>
 									<th>작성일</th>
@@ -74,8 +77,8 @@
 								<tr>
 									<td>1</td>
 									<td>홍길동</td>
-									<td><span class="text-warning">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
-										<!-- 4/5 별점 표시 --></td>
+									<td><span class="text-success">#64평 #아늑함</span></td>
+									<!-- 해시태그 형식으로 변경 -->
 									<td><img src="image_url.jpg" alt="후기 사진"
 										class="img-thumbnail" width="100"></td>
 									<td>이 제품 정말 좋아요!</td>
@@ -89,8 +92,8 @@
 								<tr>
 									<td>2</td>
 									<td>홍길동2</td>
-									<td><span class="text-warning">&#9733;&#9733;&#9733;&#9734;&#9734;</span>
-										<!-- 4/5 별점 표시 --></td>
+									<td><span class="text-success">#편리함 #추천</span></td>
+									<!-- 해시태그 형식으로 변경 -->
 									<td><img src="image_url.jpg" alt="후기 사진"
 										class="img-thumbnail" width="100"></td>
 									<td>이 제품 정말 좋아요!</td>
@@ -103,6 +106,7 @@
 							</tbody>
 						</table>
 					</div>
+
 
 					<!-- 후기 작성 모달 -->
 					<div class="modal fade" id="createReviewModal" tabindex="-1"
@@ -118,25 +122,27 @@
 									</button>
 								</div>
 								<div class="modal-body">
-									<form>
+									<form id="reviewForm">
 										<div class="form-group">
 											<label for="reviewAuthor">작성자</label> <input type="text"
 												class="form-control" id="reviewAuthor" placeholder="이름 입력">
 										</div>
 										<div class="form-group">
-											<label for="reviewRating">별점</label> <select
-												class="form-control" id="reviewRating">
-												<option value="0">0</option>
-												<option value="1">1</option>
-												<option value="2">2</option>
-												<option value="3">3</option>
-												<option value="4">4</option>
-												<option value="5">5</option>
-											</select>
+											<label for="reviewHashtag">해시태그 추가</label>
+											<div class="input-group mb-3">
+												<input type="text" class="form-control" id="reviewHashtag"
+													placeholder="# 해시태그 입력">
+												<div class="input-group-append">
+													<button class="btn btn-outline-secondary" type="button"
+														id="addHashtagButton">추가</button>
+												</div>
+											</div>
+											<div id="hashtagContainer"></div>
 										</div>
 										<div class="form-group">
 											<label for="reviewImage">사진 업로드</label> <input type="file"
-												class="form-control-file" id="reviewImage" accept="image/*" multiple>
+												class="form-control-file" id="reviewImage" accept="image/*"
+												multiple>
 										</div>
 										<div class="form-group">
 											<label for="reviewContent">내용</label>
@@ -153,6 +159,7 @@
 							</div>
 						</div>
 					</div>
+
 				</div>
 
 
@@ -216,5 +223,5 @@
 	<script src="/js/sb-admin-2.min.js"></script>
 
 </body>
-
+<script src="../js/admin/review-management.js"></script>
 </html>
