일단 제ㅐ작중

--- a/yejo/src/main/resources/templates/main/location.html
+++ b/yejo/src/main/resources/templates/main/location.html
@@ -1,138 +1,137 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="https://www.thymeleaf.org">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
-	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />
-	<meta name="subject" content="예조인테리어">
-	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 예조인테리어.">
-	<meta name="keywords" content="YEJO 인테리어">
-	<title>YEJO 인테리어</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>
+    <meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />
+    <meta name="subject" content="예조인테리어">
+    <meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 예조인테리어.">
+    <meta name="keywords" content="YEJO 인테리어">
+    <title>YEJO 인테리어</title>
 
-	<link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
-	<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="/css/pretendard.css">
-	<link rel="stylesheet" type="text/css" href="/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="/css/venobox.css">
-	<link rel="stylesheet" type="text/css" href="/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/css/doc.css">
-	<link rel="stylesheet" type="text/css" href="/css/board.css">
-	<link rel="stylesheet" type="text/css" href="/css/layout.css">
-	<link rel="stylesheet" type="text/css" href="/css/slick.css">
-	<link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/responsive.css">
-	<link rel="stylesheet" type="text/css" href="/css/kakao.css">
+    <link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/css/pretendard.css">
+    <link rel="stylesheet" type="text/css" href="/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/css/venobox.css">
+    <link rel="stylesheet" type="text/css" href="/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/css/doc.css">
+    <link rel="stylesheet" type="text/css" href="/css/board.css">
+    <link rel="stylesheet" type="text/css" href="/css/layout.css">
+    <link rel="stylesheet" type="text/css" href="/css/slick.css">
+    <link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/css/kakao.css">
 
-	<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="/js/jquery.gnb.js"></script>
-	<script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>
-	<script type="text/javascript" src="/js/slick.js"></script> 	
-	<script type="text/javascript" src="/js/swiper.min.js"></script>
-	<script type="text/javascript" src="/js/venobox.js"></script>
-	<script type="text/javascript" src="/js/jquery.ui.js"></script>
-	<script type="text/javascript" src="/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-	<script type="text/javascript" src="/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-	<link rel="stylesheet" type="text/css" href="/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen">
-	<script type="text/javascript" src="/js/wow.min.js"></script>
-	<script type="text/javascript" src="/js/script.js"></script>
-	<style>
+    <script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.gnb.js"></script>
+    <script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="/js/slick.js"></script>
+    <script type="text/javascript" src="/js/swiper.min.js"></script>
+    <script type="text/javascript" src="/js/venobox.js"></script>
+    <script type="text/javascript" src="/js/jquery.ui.js"></script>
+    <script type="text/javascript" src="/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+    <script type="text/javascript" src="/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+    <link rel="stylesheet" type="text/css" href="/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen">
+    <script type="text/javascript" src="/js/wow.min.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
 
-	</style>
 </head>
 
 <body id="sub" style="background-image:url('../images/common/sub-bg.gif');">
 <div id="skipToContent">
-	<a href="#contArea">본문 바로가기</a>
-	<a href="#gnb">주메뉴 바로가기</a>
+    <a href="#contArea">본문 바로가기</a>
+    <a href="#gnb">주메뉴 바로가기</a>
 </div>
 <div id="wrapper"> 
-	<!-- header -->
+    <!-- header -->
     <div th:replace="~{main/header :: header}"></div>
-	<!-- header -->
+    <!-- header -->
 
-	<!-- for mobile -->
-	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/"><img src="/images/common/logo2.png" alt="YEJO interior"></a></div>
-		<div class="m-lang"></div>
-		<nav class="nav-menu"></nav>
-		<a href="javascript:void(0);" class="close">Close</a>
-	</div>
-	<div class="mobile-overlay"></div>
+    <!-- for mobile -->
+    <div id="menu" class="mobile-navigation">
+        <div class="home"><a href="/"><img src="/images/common/logo2.png" alt="YEJO interior"></a></div>
+        <div class="m-lang"></div>
+        <nav class="nav-menu"></nav>
+        <a href="javascript:void(0);" class="close">Close</a>
+    </div>
+    <div class="mobile-overlay"></div>
     
-<div id="container">
-	<div id="contArea">
-		<div class="sub-title">
-			<h1>ABOUT</h1>
-		</div>
-		<div class="real-cont">
-			<div class="about wow fadeIn" data-wow-delay="0.3s" data-wow-duration="0.8s">
-				<div class="txt-wrap">
-					<h2 class="doc-tit"><span class="highlight">YEJO 인테리어는</span></h2>
-					<p class="txt">전문적이고 혁신적인 디자인으로 업계를 선도하고 있는 인테리어 전문 기업입니다.</p>
-					<div class="info">
-						<dl>
-							<dt>Address</dt>
-							<dd>경기 의정부시 호암로 252 상가1동 105호</dd>
-						</dl>
-						<dl>
-							<dt>Tel</dt>
-							<dd>010-2785-7048</dd>
-						</dl>
-						<dl>
-							<dt>Safe Tel</dt>
-							<dd>0507-1361-7048</dd>
-						</dl>
-						<dl>
-							<dt>E-mail</dt>
-							<dd></dd>
-						</dl>
-					</div>
-					<div class="btns">
-						<a href="https://map.naver.com/p/entry/place/1546050659?c=15.00,0,0,0,dh" title="새창열림" target="_blank">네이버지도 보기</a>
-						<a href="https://kko.kakao.com/5IEPZMGBwo" title="새창열림" target="_blank">카카오맵 보기</a>
-					</div>
-				</div>
-				<div class="map">
-					<div id="map" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8f3429547b6bf089e5d3beb4733c7cf5&libraries=services"></script>
-					<script charset="UTF-8">
-					    var mapContainer = document.getElementById('map'), 
-					        mapOption = { 
-					            center: new kakao.maps.LatLng(37.745755, 127.052335), // 초기 지도 중심 좌표
-					            level: 3 // 지도 확대 레벨
-					        };
-					    // 지도 생성
-					    var map = new kakao.maps.Map(mapContainer, mapOption); 
+    <div id="container">
+        <div id="contArea">
+            <div class="sub-title">
+                <h1>ABOUT</h1>
+            </div>
+            <div class="real-cont">
+                <div class="about wow fadeIn" data-wow-delay="0.3s" data-wow-duration="0.8s">
+                    <div class="txt-wrap">
+                        <h2 class="doc-tit"><span class="highlight">YEJO 인테리어는</span></h2>
+                        <p class="txt">전문적이고 혁신적인 디자인으로 업계를 선도하고 있는 인테리어 전문 기업입니다.</p>
+                        <div class="info">
+                            <dl>
+                                <dt>Address</dt>
+                                <dd th:text="${location.address}">경기 의정부시 호암로 252 상가1동 105호</dd>
+                            </dl>
+                            <dl>
+                                <dt>Tel</dt>
+                                <dd th:text="${location.tel}">010-2785-7048</dd>
+                            </dl>
+                            <dl>
+                                <dt>Safe Tel</dt>
+                                <dd th:text="${location.safeTel}">0507-1361-7048</dd>
+                            </dl>
+                            <dl>
+                                <dt>E-mail</dt>
+                                <dd th:text="${location.email}"></dd>
+                            </dl>
+                        </div>
+                        <div class="btns">
+                            <a th:href="${location.naverMapUrl}" title="새창열림" target="_blank">네이버지도 보기</a>
+                            <a th:href="${location.kakaoMapUrl}" title="새창열림" target="_blank">카카오맵 보기</a>
+                        </div>
+                    </div>
+                    <div class="map">
+                        <div id="map" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+                        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8f3429547b6bf089e5d3beb4733c7cf5&libraries=services"></script>
+                        <script charset="UTF-8">
+                            var mapContainer = document.getElementById('map'), 
+                                mapOption = { 
+                                    center: new kakao.maps.LatLng(37.745755, 127.052335), // 초기 지도 중심 좌표
+                                    level: 3 // 지도 확대 레벨
+                                };
+                            // 지도 생성
+                            var map = new kakao.maps.Map(mapContainer, mapOption); 
 
-					    // 초기 마커 설정
-					    var marker = new kakao.maps.Marker({
-					        position: mapOption.center,
-					        map: map
-					    });
+                            // 초기 마커 설정
+                            var marker = new kakao.maps.Marker({
+                                position: mapOption.center,
+                                map: map
+                            });
 
-					 // 인포윈도우 내용 및 스타일 적용
-					    var iwContent = '<div class="custom-info-window" style="margin-left:10px;">YEJO 인테리어</div>'; // 인포윈도우에 표시할 내용
-					    var infowindow = new kakao.maps.InfoWindow({
-					        content: iwContent, // 인포윈도우에 표시할 내용 설정
-					        removable: true // 닫기 버튼을 제공
-					    });
+                            // 인포윈도우 내용 및 스타일 적용
+                            var iwContent = '<div class="custom-info-window" style="margin-left:10px;">YEJO 인테리어</div>'; // 인포윈도우에 표시할 내용
+                            var infowindow = new kakao.maps.InfoWindow({
+                                content: iwContent, // 인포윈도우에 표시할 내용 설정
+                                removable: true // 닫기 버튼을 제공
+                            });
 
-					    // 인포윈도우를 마커 위에 표시
-					    infowindow.open(map, marker);
-					</script>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<a href="https://open.kakao.com/o/your-openchat-link" target="_blank" class="kakao-btn">
-    <img src="/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
-</a>
+                            // 인포윈도우를 마커 위에 표시
+                            infowindow.open(map, marker);
+                        </script>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <a href="https://open.kakao.com/o/your-openchat-link" target="_blank" class="kakao-btn">
+        <img src="/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
+    </a>
 
-	<!-- footer -->
+    <!-- footer -->
    <div th:replace="~{main/footer :: footer}"></div>
     <!-- footer -->
 </div>
